# opengl-tutorial

./: .clang-format  .clangd  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  main.cpp
